[workspace]
members = [
    "lib/av-encoder",
    "lib/cache",
    "lib/wasm-runtime",
    "lib/wasm-runtime-types",
    "lib/wasm-logic-db",
    "lib/wasm-logic-fs",
    "lib/wasm-logic-http",
    "lib/wasm-logic-graphics",
    "lib/ui-wasm-manager",
    "lib/native",
    "lib/network",
    "lib/base",
    "lib/base-fs",
    "lib/base-http",
    "lib/base-io-traits",
    "lib/base-io",
    "lib/base-log",
    "lib/config",
    "lib/config-fs",
    "lib/config-macro",
    "lib/hiarc",
    "lib/hiarc-macro",
    "lib/graphics",
    "lib/graphics-backend",
    "lib/graphics-backend-traits",
    "lib/graphics-types",
    "lib/graphics-base-traits",
    "lib/api",
    "lib/api-wasm-macros",
    "lib/api-macros",
    "lib/api-ui",
    "lib/image",
    "lib/pool",
    "lib/sound",
    "lib/sql",
    "lib/ui-base",
    "lib/ui-traits",
    "examples/wasm-modules/actionfeed",
    "examples/wasm-modules/ui",
    "examples/wasm-modules/state",
    "examples/wasm-modules/render-game",
    "examples/wasm-modules/scoreboard",
    "examples/wasm-modules/chat",
    "examples/wasm-modules/emote_wheel",
    "examples/wasm-modules/prediction_timer_ui",
    "examples/wasm-modules/vote",
    "examples/wasm-modules/console",
    "examples/wasm-modules/connecting",
    "examples/wasm-modules/graphics",
    "examples/wasm-modules/mainmenu",
    "examples/wasm-modules/ingame_menu",
    "src/server-bin",
    "src/emoticon-convert",
    "src/game-convert",
    "src/skin-convert",
    "src/part-convert",
    "src/master-server",
    "game/client-extra",
    "game/client-map",
    "game/client-render-base",
    "game/client-render",
    "game/client-types",
    "game/client-containers",
    "game/client-ui",
    "game/server",
    "lib/game-database",
    "game/shared-base",
    "game/shared-game",
    "game/shared-network",
    "game/shared",
    "game/api-state",
    "game/api-ui-game",
    "game/master-server-types",
    "game/game-config",
    "game/game-config-fs",
    "game/client-render-game",
    "game/client-console",
    "game/api-render-game",
    "game/client-demo", "game/editor", "src/map-convert", "game/map-convert-lib", "lib/sound-backend",
    "lib/wasm-logic-sound", "game/api-editor",
    "examples/wasm-modules/editor_wasm",
    "examples/lib-modules/editor-lib",
    "game/egui-timeline",
    "game/game-interface", "game/map", "lib/bin-patch",
    "accounts/lib/accounts-shared",
    "accounts/bin/account-server",
    "accounts/lib/account-client",
    "accounts/lib/account-game-server", "accounts/lib/account-sql", "game/binds", "accounts/lib/client-http-fs", "accounts/lib/client-reqwest", "game/client-accounts", 
    "lib/game-database-backend",
    "lib/game-database-macros", "game/http-accounts", "accounts/lib/accounts-types", "game/command-parser", "src/dilate", "game/prediction-timer",
]

[package]
name = "ddnet-playground"
description = "DDraceNetwork, a free cooperative platformer game"
version = "0.1.0"
edition = "2021"
publish = false
license = "Zlib"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ddnet-playground"
path = "src/lib.rs"

[dependencies]
ui-wasm-manager = { path = "lib/ui-wasm-manager" }
native = { path = "lib/native" }
network = { path = "lib/network" }
math = { path = "lib/math" }
base = { path = "lib/base" }
base-fs = { path = "lib/base-fs" }
base-http = { path = "lib/base-http" }
base-io = { path = "lib/base-io" }
base-log = { path = "lib/base-log" }
config = { path = "lib/config" }
config-fs = { path = "lib/config-fs" }
graphics = { path = "lib/graphics" }
graphics-backend = { path = "lib/graphics-backend" }
graphics-types = { path = "lib/graphics-types" }
image = { path = "lib/image" }
sound = { path = "lib/sound" }
sound-backend = { path = "lib/sound-backend" }
ui-base = { path = "lib/ui-base" }
ui-traits = { path = "lib/ui-traits" }
pool = { path = "lib/pool" }
bin-patch = { path = "lib/bin-patch" }

game-config = { path = "game/game-config" }
game-config-fs = { path = "game/game-config-fs" }
client-accounts = { path = "game/client-accounts" }
client-render-base = { path = "game/client-render-base" }
client-render-game = { path = "game/client-render-game" }
client-console = { path = "game/client-console" }
client-map = { path = "game/client-map", default-features = false }
client-types = { path = "game/client-types" }
client-containers = { path = "game/client-containers" }
client-ui = { path = "game/client-ui" }
client-demo = { path = "game/client-demo", default-features = false }
command-parser = { path = "game/command-parser" }
server = { path = "game/server", default-features = false }
shared-base = { path = "game/shared-base" }
game-interface = { path = "game/game-interface" }
shared-network = { path = "game/shared-network" }
binds = { path = "game/binds" }
prediction-timer = { path = "game/prediction-timer" }
shared = { path = "game/shared", default-features = false }
editor = { path = "game/editor", default-features = false }

egui-winit = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", default-features = false, features = ["x11", "arboard"] }
raw-window-handle = "0.6.2"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }
num = "0.4.3"
arrayvec = "0.7.6"
egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", features = ["serde"] }
rayon = "1.10.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = "1.7.1"
egui_extras = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b" }
emath = "0.28.1"
fixed = "1.28.0"
serde = "1.0.208"
serde-value = "0.7.0"
serde_json = "1.0.125"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "pr-skipped-it", features = ["serde", "serde_impl"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
parking_lot = "0.12.3"
thread-priority = "1.1.0"
difference = "2.0"
hiarc = { path = "lib/hiarc", features = ["derive"] }
trybuild = "1.0"
env_logger = "0.11.5"
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
either = "1.13.0"
url = "2.5.2"
log = "0.4.22"
x509-cert = { version = "0.2.5" }
alloc-track = { version = "0.3.0", optional = true }


[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", features = ["serde"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
ndk = { version = "0.9.0", default-features = false }

# super slow in debug
[profile.dev.package.blake3]
opt-level = 3
[profile.dev.package.rav1e]
opt-level = 3
[profile.dev.package.matroska]
opt-level = 3
[profile.dev.package.av-format]
opt-level = 3
[profile.dev.rsa]
opt-level = 3
[profile.dev.rand]
opt-level = 3

[features]
bundled_data_dir = ["base-fs/bundled_data_dir"]
legacy = ["server/legacy", "shared/legacy", "editor/legacy", "client-map/legacy", "client-demo/legacy"]

alloc_track = ["alloc-track"] 

default = ["legacy"]

[profile.release]
lto = false
opt-level = 3
codegen-units = 1
strip = false

[package.metadata.bundle]
short_description = "DDraceNetwork, a free cooperative platformer game"
long_description = """
DDraceNetwork (DDNet) is an actively maintained version of DDRace, a Teeworlds modification with a unique cooperative gameplay.
Help each other play through custom maps, compete against the best in international tournaments, design your own maps, or run your own server.
The official servers are around the world.
All ranks made on official servers are available worldwide and you can collect points!
"""
