[package]
name = "api-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
editor = { path = "../editor" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
api = { path = "../../lib/api" }
ui-base = { path = "../../lib/ui-base" }
graphics-types = { path = "../../lib/graphics-types" }
config = { path = "../../lib/config" }
once_cell = "1.19.0"
egui = { version = "0.27.2", features = ["serde"] }
