[package]
name = "api-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
editor = { path = "../editor" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
api = { path = "../../lib/api" }
ui-base = { path = "../../lib/ui-base" }
graphics-types = { path = "../../lib/graphics-types" }
config = { path = "../../lib/config" }
once_cell = "1.19.0"
egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", features = ["serde"] }
