[package]
name = "api-render-game"
version = "0.1.0"
edition = "2021"

[dependencies]
client-render-game = { path = "../client-render-game" }
shared-base = { path = "../shared-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }

ui-base = { path = "../../lib/ui-base" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
api = { path = "../../lib/api" }
graphics-types = { path = "../../lib/graphics-types" }
config = { path = "../../lib/config" }
pool = { path = "../../lib/pool" }

once_cell = "1.19.0"
url = { version = "2.5.2", features = ["serde"] }
