[package]
name = "api-state"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-base = { path = "../shared-base" }
shared-game = { path = "../shared-game" }
game-interface = { path = "../game-interface" }
map = { path = "../map" }
base-log = { path = "../../lib/base-log" }
base-io = { path = "../../lib/base-io" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
api = { path = "../../lib/api" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }
game-database = { path = "../../lib/game-database" }
once_cell = "1.19.0"
