[package]
name = "api-state"
version = "0.1.0"
edition = "2021"

[dependencies]
game-interface = { path = "../game-interface" }
map = { path = "../map" }
base-io = { path = "../../lib/base-io" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
api = { path = "../../lib/api" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }
game-database = { path = "../../lib/game-database" }
once_cell = "1.19.0"
