[package]
name = "api-ui-game"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../../lib/api" }
ui-base = { path = "../../lib/ui-base" }
graphics = { path = "../../lib/graphics" }
once_cell = "1.19.0"
egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", features = ["serde"] }

client-containers = { path = "../../game/client-containers" }
client-render-base = { path = "../../game/client-render-base" }
base-log = { path = "../../lib/base-log" }
