[package]
name = "client-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binds = { path = "../binds" }
client-ui = { path = "../client-ui" }
client-types = { path = "../client-types" }
game-config = { path = "../game-config" }
client-render = { path = "../client-render" }
command-parser = { path = "../command-parser" }
base = { path = "../../lib/base" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
ui-base = { path = "../../lib/ui-base" }

egui = { git = "https://github.com/emilk/egui", rev = "9a1e358a144b5d2af9d03a80257c34883f57cf0b", features = ["serde"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
