[package]
name = "client-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
av-encoder = { path = "../../lib/av-encoder" }
base-io = { path = "../../lib/base-io" }
base = { path = "../../lib/base" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
graphics-backend = { path = "../../lib/graphics-backend" }
pool = { path = "../../lib/pool" }
ui-base = { path = "../../lib/ui-base" }
sound = { path = "../../lib/sound" }
bin-patch = { path = "../../lib/bin-patch" }

client-map = { path = "../client-map", default-features = false }
shared-base = { path = "../shared-base" }
game-interface = { path = "../game-interface" }
client-render-game = { path = "../client-render-game" }
client-render-base = { path = "../client-render-base" }
game-config = { path = "../game-config" }

serde = { version = "1.0.203", features = ["derive"] }
bincode = { features = ["serde"], version = "2.0.0-rc.3" }
anyhow = { version = "1.0.86", features = ["backtrace"] }
rayon = "1.10.0"
tempfile = "3.10.1"
zstd = { version = "0.13", features = ["experimental"] }
itertools = "0.13.0"

[features]
legacy = ["client-map/legacy"]

default = ["legacy"]
